--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <!-- navbar -->
+    
     <nav
         class="navbar navbar-expand-sm"
     >
@@ -47,6 +49,8 @@
             </div>
         </div>
     </nav>
+
+    <!-- navbar end-->
 
     <div class="container-fluid j1">
         <h1 class="text-center p-5">About Us</h1>
